Free Transform: Support negative rotation, track rotation direction for animation intent.

BUG:438343